# AgentVault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  localupdate.sh  onpkg.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-4-report.md
crates/vault-cli/: Cargo.toml  build.rs
crates/vault-cli/src/: cli.rs  main.rs
crates/vault-cli/src/commands/: config.rs  connector.rs  doctor.rs  export.rs  import.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  serve.rs  status.rs  sync.rs  ui.rs  update.rs  watch.rs
crates/vault-cli/tests/: e2e_tests.rs
crates/vault-connectors/: Cargo.toml
crates/vault-connectors/src/: claude.rs  codex.rs  gemini.rs  lib.rs  opencode.rs  sync.rs  tests.rs  traits.rs  types.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: agent.rs  config.rs  error.rs  lib.rs  manifest.rs  registry.rs  search.rs  store.rs  watcher.rs
crates/vault-core/src/capability/: models.rs
crates/vault-core/src/gateway/: child.rs  mod.rs  registry.rs  tests.rs
crates/vault-core/src/mcp/: health.rs  manager.rs  manager_tests.rs  mod.rs  models.rs
crates/vault-core/src/skill/: manager.rs  models.rs
crates/vault-core/src/sql/: 001_initial.sql
crates/vault-core/src/workflow/: manager.rs  mod.rs  models.rs  resolver.rs
docs/: CHANGELOG.md  CLI.md  CORE.md  GATEWAY.md  IMPLEMENTATION_PLAN.md  PRD.md  SPEC.md  TODO.md
docs/superpowers/plans/: 2026-06-22-agent-connectors.md  2026-06-22-mcp-management-core.md  2026-06-23-manifest-declarative-config.md  2026-06-23-search-discovery.md
