[workspace]
resolver = "2"
members = [
    "crates/vault-cli",
    "crates/vault-core",
    "crates/vault-connectors",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

[profile.dev]
# Reduce debug info from full (2) to line tables only (1) to significantly
# decrease compilation time and compiler RAM usage.
debug = 1

[profile.test]
# Keep test profile aligned with dev profile to prevent high RAM usage during cargo test
debug = 1