[package]
name = "vault-cli"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
vault-connectors = { path = "../vault-connectors" }

# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# Error handling at the CLI boundary
anyhow.workspace = true

# Terminal output
owo-colors = "4"
indicatif = "0.17"
tabled = "0.16"
dialoguer = "0.11"
dirs = "5"
ratatui = "0.26"
crossterm = "0.27"

# Shared workspace deps
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
semver.workspace = true
tempfile.workspace = true

# File system notification
notify = "6.1.1"


[build-dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_mangen = "0.2"
