[package]
name = "vault-connectors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }

# Serialization (reading/writing agent config files)
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async
tokio.workspace = true
async-trait = "0.1"

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true
