[package]
name = "vault-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio.workspace = true
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time
chrono.workspace = true

# Versioning
semver.workspace = true

# ID generation
uuid.workspace = true

# Hashing (integrity checks)
sha2 = "0.10"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Platform-specific directories
dirs = "5"

# Temp files
tempfile.workspace = true
