[package]
name = "vault-core"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time
chrono.workspace = true

# Versioning
semver.workspace = true

# ID generation
uuid.workspace = true

# Hashing (integrity checks)
sha2 = "0.10"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Platform-specific directories
dirs = "5"

# Temp files
tempfile.workspace = true

# File system notification
notify = "6.1.1"

